Fixed displaying horizontal scrollbar on desktop

--- a/app/res/css/style.css
+++ b/app/res/css/style.css
@@ -9,6 +9,7 @@ html {
   font-family: "Montserrat", sans-serif;
   width: 100vw;
   height: 100vh;
+  max-width: 100%;
 }
 
 body {
